--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/testEntity/**/build/
 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -25,6 +26,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/testEntity/**/out/
+application-secret.properties
 
 ### NetBeans ###
 /nbproject/private/
