--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,3 @@
-server.port = 8081
-# MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/seoul_station?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-
-# DB username
-spring.datasource.username=user_seoul_station
-
-# DB password
-spring.datasource.password=1234
-
 # DB Sql jpa
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.show_sql=true
@@ -19,3 +6,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 spring.jpa.hibernate.ddl_auto=create 
 # DB create: ???? table ?? ? ??. update: ???? ??.
+
+#properties
+spring.profiles.include=secret
