--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DB Sql jpa
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.database=mysql
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
 
-spring.jpa.hibernate.ddl_auto=create 
+#spring.jpa.hibernate.ddl_auto=create
 # DB create: ???? table ?? ? ??. update: ???? ??.
 
 #properties
